---
source: compiler-core/src/fsharp/tests/functions.rs
expression: "\nfn go() {\n  use a <- something\n  a + 1\n}\nfn something(cba) { cba(1) }\n"
---
module rec my.``mod``

let private something (cba: int64 -> 'u12) = begin
    cba (1L)
end
let private go () = begin
    something
        (fun(a: int64) -> a + 1L)
end
